<RelativeLayout android:id="@+id/league_root_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="4dp">

<com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
    android:id="@+id/ranking_text_view"
    style="@style/WrapContent"
    android:minWidth="20dp"
    android:maxLines="1"
    android:layout_centerVertical="true"
    android:layout_marginEnd="@dimen/small"
    android:gravity="center"
    android:text="1"
    android:textColor="@color/black_opacity_87"
    android:textSize="25sp"
    app:typeFace="roboto_bold"
    />
    <ImageView
        android:id="@+id/team_image_view"
        style="@style/WrapContent"
        android:layout_toEndOf="@+id/ranking_text_view"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/small"
        android:scaleType="fitXY"
        />
    <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
        android:id="@+id/team_text_view"
        style="@style/WrapContent"
        android:maxLines="1"
        android:layout_toEndOf="@+id/team_image_view"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/small"
        android:gravity="center"
        android:text="Manchester United"
        android:textColor="@color/black_opacity_87"
        android:textSize="17sp"
        app:typeFace="roboto_bold"
        />
    <LinearLayout
        android:id="@+id/content_layout"
        style="@style/WrapContent"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/team_text_view"
        >
        <LinearLayout
            style="@style/WrapContent"
            android:id="@+id/games_layout"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:id="@+id/games_basic_layout"
                style="@style/WrapContent"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/games_name_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="@string/_gamesText"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/games_count_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="15"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/games_secondary_layout"
                style="@style/WrapContent"
                android:orientation="horizontal">

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/wins_name_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="@string/_wins"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/games_wins_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_toEndOf="@+id/games_count_text_view"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/green_forest"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/drawn_name_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="@string/_drawn"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/games_drawn_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_toEndOf="@+id/games_wins_text_view"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/yellow_turbo"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/loses_name_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="@string/_loses"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />
                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/games_loses_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_toEndOf="@+id/games_drawn_text_view"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/red_burgundy"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/goals_layout"
            style="@style/WrapContent"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:id="@+id/basic_goals_layout"
                style="@style/WrapContent"
                android:orientation="horizontal"
                android:layout_gravity="center">
            <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                android:id="@+id/goals_name_text_view"
                style="@style/WrapContent"
                android:maxLines="1"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/small"
                android:gravity="center"
                android:text="@string/_goalsText"
                android:textColor="@color/black_opacity_87"
                android:textSize="15sp"
                app:typeFace="roboto_bold"
                />

            <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                android:id="@+id/goals_text_view"
                style="@style/WrapContent"
                android:maxLines="1"
                android:layout_toEndOf="@+id/games_loses_text_view"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/small"
                android:gravity="center"
                android:text="33"
                android:textColor="@color/black_opacity_87"
                android:textSize="15sp"
                app:typeFace="roboto_bold"
                />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/secondary_goals_layout"
                style="@style/WrapContent"
                android:orientation="horizontal">

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/goals_against_name_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_toEndOf="@+id/goals_text_view"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="@string/_goalsAgainst"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/goals_against_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_toEndOf="@+id/goals_text_view"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="21"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />

                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/goals_difference_name_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_toEndOf="@+id/goals_text_view"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="@string/_goalsDifference"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />
                <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                    android:id="@+id/goals_difference_text_view"
                    style="@style/WrapContent"
                    android:maxLines="1"
                    android:layout_toEndOf="@+id/goals_against_text_view"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@color/black_opacity_87"
                    android:textSize="15sp"
                    app:typeFace="roboto_bold"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/points_layout"
            style="@style/WrapContent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                android:id="@+id/points_name_text_view"
                style="@style/WrapContent"
                android:maxLines="1"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/small"
                android:gravity="center"
                android:text="@string/_pointsText"
                android:textColor="@color/black_opacity_87"
                android:textSize="15sp"
                app:typeFace="roboto_bold"
                />

            <com.pms.kirillbaranov.premierleague.ui.TypeFaceTextView
                android:id="@+id/points_text_view"
                style="@style/WrapContent"
                android:maxLines="1"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/small"
                android:gravity="center"
                android:text="44"
                android:textColor="@color/blue_dark_teal"
                android:textSize="15sp"
                app:typeFace="roboto_bold"
                />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>